# kkutilz

./: .flake8  LICENSE  Pipfile  README.md  pyproject.toml
Notes/: notes.txt
Notes/env_config/: bash.txt
scriptz/: drop_garbage.py
src/: main2.py  main3.py
src/kkutilz/: __init__.py
src/kkutilz/logz/: log_stdio.py  logman.py  pipe_fed_sqlite.py  sqlite_log.py  threaded_sqlite.py
