[project]
name = "kkutilz"
version = "0.1.0"
description = "kourosh's utility package"
authors = [{ name="Kourosh Khosravi" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/kouritron/kkutilz"
Repository = "https://github.com/kouritron/kkutilz"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
